Some last minute fixes to get it to work on IOS.

--- a/src/main.css
+++ b/src/main.css
@@ -395,6 +395,12 @@ views|Units s|RadioButton{
 		skinClass: ClassReference("spark.skins.mobile.BeveledActionButtonSkin");
 	}
 	
+	#storeName{
+		fontFamily: "Trade Gothic LT Std";
+		fontWeight: bold;
+		
+	}
+	
 }
 
 @media(application-dpi:160){
